2001-03-07  Masatake YAMATO  <yamato@redhat.com>

	Applied a patch from Martin.
	Message-ID: <3AA15F77.44F4ECAF@gmx.net>.

	* autotrace.h: Improved fitting speed, reduced number of
	fitting parameters.

	* fit.c: Likewise.

	* main.c: Likewise.

 	Applied a patch from Martin.
	Message-ID: <3AA129B5.FE736C40@gmx.net>.
	
	* main.c: Replaced static bool thin; by static bool thin = false;
	in main.c otherwise there is no initialization.
	
2001-03-07  Masatake YAMATO  <yamato@redhat.com>

	* types.h (struct): Remove dimensions_type.
	(DIMENSIONS_HEIGHT): Likewise.
	(DIMENSIONS_WIDTH): Likewise.

 	Applied patches from Martin.
	Message-ID: <3AA12454.6AF6FD69@gmx.net>.
	
	* autotrace.h (struct _at_bitmap_type): Remove dimensions_type.

 	* bitmap.c (new_bitmap): Likewise.

	* bitmap.h: Likewise.

 	* median.c: Likewise.

	* input-magick.c: Likewise.

	* pxl-outline.c: Likewise.

	* input-pnm.c: Likewise.

	* autotrace.c: Likewise.

	Applied patches from Martin.
	Message-ID: <3AA11C68.9B494013@gmx.net>

	* output-emf.c: Replaced TRUE and FALSE by true and false.

	* types.h: Remove TRUE and FALSE.

	Applied patches from Martin.
	Message-ID: <3AA11A4B.BD319064@gmx.net>.
	
	* autotrace.dsp: Removed usefull.h and median.h.

	* Makefile.am (libautotrace_a_SOURCES): Remove median.h.

	* types.h: Removed unnecessary #ifdef __cplusplus.

 	* usefull.h: File is removed.

	* Makefile.am (noinst_HEADERS): usefull.h is removed.

 	* fit.c: Likewise.

 	* output-er.c: Likewise.

2001-03-02  Masatake YAMATO  <yamato@redhat.com>

	* pxl-outline.c: Put file name on the head of file.

	* Makefile.am: Added autotrace.m4 supports.

	* autotrace.m4: New file.

2001-02-28  Masatake YAMATO  <yamato@redhat.com>

 	Applied a patch from Martin.

	* output-emf.c: Now supports centerline.

2001-02-27  Masatake YAMATO  <yamato@redhat.com>

	* NEWS: Write about dxf.

 	Applied a patch from Martin.

	* NEWS: Updated.	

	* output.c: Don't include output-dxf.h and
	output-dxf12.h.
